--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="utf-8" />
     <title>AngularJS User Registration and Login Example & Tutorial</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="navbar.css" />
+    <link rel="stylesheet" href="footer.css" />
     <link href="//cdn.rawgit.com/cornflourblue/angular-registration-login-example/master/app-content/app.css" rel="stylesheet" />
 </head>
 <body>
 
-<nav >
+
+<nav>
     <ul>
         <li class="tmfaTooltip">My Courses &#x25BC
             <div class="tmfaTooltipMenu tmfaBottomSide">
@@ -56,7 +59,11 @@
 <script src="login.controller.js"></script>
 <script src="//cdn.rawgit.com/cornflourblue/angular-registration-login-example/master/register/register.controller.js"></script>
 
-
+<footer>
+    <p>Last Update: August 28, 2017<br>
+        Copyright © 2017 Deutsche Bank AG, Frankfurt am Main
+    </p>
+</footer>
 
 </body>
 </html>
