Add My courses functionality

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -15,7 +15,8 @@
         <li>
             <img src="db-logo.png" title="Deutsche Bank Logo" alt="Deutsche Bank" />
         </li>
-        <li class="tmfaTooltip">My Courses &equiv;
+        <li class="tmfaTooltip">
+            <a href="#!/">My Courses &equiv;</a>
             <div class="tmfaTooltipMenu tmfaBottomSide">
                 <ul>
                     <li>In progress</li>
@@ -24,16 +25,18 @@
             </div>
         </li>
         <li>
-            <a href="#!/admin/users"> All courses</a>
+            <a href="#!/courses" > All courses</a>
         </li>
         <li>Recommendations</li>
-        <li><input type="text" placeholder="Search &#x1F50D"></li>
+        <li><input type="text" placeholder="Search &#x1F50D" ng-model="query"></li>
         <li class="tmfaTooltip">
             <span id="user-name">{{globals.currentUser.username}}</span>
             <span class="equiv">&equiv;</span>
             <div class="tmfaTooltipMenu tmfaBottomSide">
                 <ul>
-                    <li>My courses</li>
+                    <li>
+                        <a href="#!/" >My courses</a>
+                    </li>
                     <li>
                         <a href="#!/login" >Logout</a>
                     </li>
@@ -57,6 +60,7 @@
     Copyright © 2017 Deutsche Bank AG, Frankfurt am Main
 </footer>
 
+
 <script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="//code.angularjs.org/1.6.0/angular.min.js"></script>
 <script src="//code.angularjs.org/1.6.0/angular-route.min.js"></script>
@@ -66,12 +70,8 @@
 <script src="authentication.service.js"></script>
 <script src="flash.service.js"></script>
 
-<!-- Real user service that uses an api -->
+
  <script src="user.service.js"></script>
-
-<!-- Fake user service for demo that uses local storage -->
-<!--<script src="//cdn.rawgit.com/cornflourblue/angular-registration-login-example/master/app-services/user.service.local-storage.js"></script>-->
-
 <script src="home.controller.js"></script>
 <script src="login.controller.js"></script>
 <script src="register.controller.js"></script>
